--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:8081/schedule
+spring.datasource.url=jdbc:mysql://localhost:3306/schedule
 spring.datasource.username=root
-spring.datasource.password={40274027}
+spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.port=9090
